# jsssa

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: anal.rs  anl.rs  ast.rs  ast2ir.rs  cli.rs  collections.rs  emit.rs  err.rs  ffi.rs  ir.rs  ir2ast.rs  main.rs  opt.rs  opt_ast.rs  parse.rs  swc_globals.rs  util.rs  utils.rs
src/anal/: refs.rs
src/anal/tests/: fns.rs  refs.rs
src/anl/: fns.rs  refs.rs
src/anl/tests/: fns.rs  mod.rs  refs.rs
src/ast/: ast.rs  types.rs
src/ast2ir/: hoist.rs
src/ir/: float.rs  fold.rs  ir.rs  mod.rs  print.rs  ref_.rs  scope.rs  traverse.rs  types.rs  visit.rs
src/ir2ast/: ssa.rs
src/opt/: constant.rs  dce.rs  forward.rs  inline.rs  mut2ssa.rs  redundant.rs  redundant_obj.rs  sroa.rs  unroll.rs  writeonly.rs
src/opt/tests/: all_passes.rs  constant.rs  dce.rs  forward.rs  inline.rs  mod.rs  mut2ssa.rs  redundant.rs  redundant_obj.rs  sroa.rs  unroll.rs  writeonly.rs
src/opt_ast/: if2cond.rs  merge_vars.rs  resugar_loops.rs  swc.rs
src/opt_ast/tests/: if2cond.rs  merge_vars.rs  mod.rs  resugar_loops.rs  swc.rs
src/tests/: all_phases.rs  ast2ir.rs  collections.rs  emit.rs  ir2ast.rs  mod.rs  opt_ast.rs  parse.rs
src/tests/js/: snudown.js
src/tests/snapshots/: all_phases__assign_to_expr.snap  all_phases__basic.snap  all_phases__basic_inlining.snap  all_phases__completely_redundant_var.snap  all_phases__deconflict_nan.snap  all_phases__do_not_eliminate_for_in_with_assignments.snap  all_phases__do_not_inline_multi_use.snap  all_phases__dont_inline_into_loop.snap  all_phases__fn_hoisting_blocks.snap  all_phases__fn_hoisting_labelled.snap  all_phases__fn_hoisting_toplevel.snap  all_phases__fn_scopes_do_not_deter_ssa_inlining.snap  all_phases__inline_into_if_but_not_past_effects.snap  all_phases__inserts_parens_where_necessary.snap  (+64 more)
swc_fixer/: Cargo.toml
swc_fixer/src/: factory.rs  lib.rs
(+104 files in other folders)
